Updated Foreign function features upto JDK-20 API standard